--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.3",
-    "vite": "^7.0.0",
-    "vite-plugin-vue-devtools": "^7.7.7"
+    "vite": "^7.0.0"
   }
 }
