--- a/neo-app/package.json
+++ b/neo-app/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "neo",
-  "version": "0.0.0",
+  "name": "neo-app",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,16 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue": "^3.5.17"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
     "@vitejs/plugin-vue": "^6.0.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.3",
-    "vite": "^7.0.0",
-    "vite-plugin-vue-devtools": "^8.0.0"
+    "tailwindcss": "^4.1.11",
+    "vite": "^7.0.4"
   }
 }
