--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "builds": [
     { "src": "api/**/*.js", "use": "@vercel/node" },
-    { "src": "vite.config.js", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
+    { "src": "package.json", "use": "@vercel/static-build" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1.js" },
