Fix static file routing in Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
     { "src": "package.json", "use": "@vercel/static-build" }
   ],
   "routes": [
+    { "handle": "filesystem" },
     { "src": "/api/(.*)", "dest": "/api/$1.js" },
     { "src": "/(.*)", "dest": "/" }
   ]
