--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,14 @@
 {
+  "version": 2,
   "functions": {
     "api/*.js": {
       "runtime": "nodejs18.x"
     }
-  }
+  },
+  "builds": [
+    {
+      "src": "index.html",
+      "use": "@vercel/static"
+    }
+  ]
 }
