--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,9 @@
 {
-  "builds": [
-    { "src": "api/**/*.js", "use": "@vercel/node" },
-    { "src": "package.json", "use": "@vercel/static-build" }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1.js" },
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/" }
+  "functions": {
+    "api/*.js": { "runtime": "nodejs20.x" }
+  },
+  "rewrites": [
+    { "source": "/api/:match*", "destination": "/api/:match*" },
+    { "source": "/:path*", "destination": "/" }
   ]
 }
