--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,11 @@
 {
+  "version": 2,
   "functions": {
     "api/*.js": { "runtime": "nodejs20.x" }
   },
   "rewrites": [
     { "source": "/api/:match*", "destination": "/api/:match*" },
-    {
-      "source": "/:path*",
-      "destination": "/",
-      "has": [
-        {
-          "type": "method",
-          "value": "GET"
-        }
-      ]
-    }
+    { "source": "/:path*", "destination": "/" }
   ]
 }
+
