--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,18 @@
 {
   "version": 2,
   "functions": {
-    "api/*.js": { "runtime": "nodejs20.x" }
+    "api/*.js": {
+      "runtime": "nodejs20.x"
+    }
   },
   "rewrites": [
-    { "source": "/api/:match*", "destination": "/api/:match*" },
-    { "source": "/:path*", "destination": "/" }
+    {
+      "source": "/api/:match*",
+      "destination": "/api/:match*"
+    },
+    {
+      "source": "/:path*",
+      "destination": "/"
+    }
   ]
 }
-
